# proposal-governance-analysis

./: .gitignore  AGENTS.md  LICENSE  README.md  database_schema.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: companies_aliases.json  merge.json
scripts/: debug_stage_parse.py
src/: dataloader.py  dbschema.py  governance.py  governance_calc.py  governance_plots.py  governance_stats.py  health_check.py  main.py  statistics.py  statistics2.py  timeutils.py  validate_data.py  visualizations.py
src/enhance_data/: add_companies.py  deduplicate_companies.py  merge_companies.py  merge_people.py
tests/: test_governance.py
