[project]
name = "proposal-governance-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "setuptools<81",
    "ydata-profiling>=4.18.4",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "tabulate>=0.9.0",
    "networkx>=3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
]

