[project]
name = "proposal-governance-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "setuptools<81",
    "polars>=1.10.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "altair>=6.1.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "tabulate>=0.10.0",
    "rustworkx>=0.17.1",
    "tqdm>=4.67.3",
    "diskcache>=5.6.3",
    "tldextract>=5.3.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
